# rlhf-trainer

./: README.md  dpo_trainer.py  main.py  pyproject.toml  train_policy.py  train_rm.py  train_rw.py
configs/: ds_config.yaml  policy_config.yaml  rm_config.yaml
data/: preferences-mini.json
grpo_gsm8k/: eval.py  result-1800-out.json  result-1800.json
