[project]
name = "rlhf-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.1",
    "deepspeed>=0.16.7",
    "modelscope>=1.25.0",
    "reward>=0.0.4",
    "swanlab>=0.5.7",
    "torch>=2.7.0",
    "trl>=0.17.0",
]
